# KiteSim

./: .gitignore  CMakeLists.txt  README.md
.kiro/specs/wind-energy-system/: design.md  requirements.md  tasks.md
examples/: CMakeLists.txt
include/kite_sim/: aerodynamics.h  constants.h  coordinate_transforms.h  dynamics.h  integration_engine.h  kite_geometry.h  kite_simulator.h  kite_state.h  math_types.h  stability_analysis.h  tether.h  wind_model.h
src/: aerodynamics.cpp  dynamics.cpp  integration_engine.cpp  kite_geometry.cpp  kite_simulator.cpp  kite_state.cpp  math_types.cpp  placeholder.cpp  stability_analysis.cpp  tether.cpp  wind_model.cpp
tests/: CMakeLists.txt  test_aero_coefficients.cpp  test_aerodynamics.cpp  test_coordinate_transforms.cpp  test_dynamics.cpp  test_integration_engine.cpp  test_kite_geometry.cpp  test_kite_simulator.cpp  test_kite_state.cpp  test_math_types.cpp  test_stability_analysis.cpp  test_tether.cpp  test_wind_model.cpp
